<resources>
    <string name="app_name">PROG7312_POE_J.A.C.K.D</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>


    <!--    swipe page translations-->
    <string name="swipe_right">SWIPE RIGHT</string>
    <string name="choose_language">Choose a Language</string>

    <!--    menu page translations-->
    <string name="MENU">Menu</string>
    <string name="MY">MY</string>
    <string name="SEARCH">SEARCH</string>
    <string name="MY_SUITCASE">MY SUITCASE</string>
    <string name="MY_PROFILE">MY PROFILE</string>

    <!--    Login page translations-->
    <string name="Login">LOGIN</string>
    <string name="SignInInstructions">SIGN IN WITH YOUR GOOGLE ACCOUNT</string>
    <string name="GoogleLogin">LOGIN WITH GOOGLE</string>
    <string name="NewAccountQ">DON\'T HAVE AN ACCOUNT?</string>
    <string name="REGISTER">REGISTER</string>

    <!--    register page translations -->
    <string name="RegisterInstructions">CREATE AN ACCOUNT WITH YOUR GOOGLE ACCOUNT</string>
    <string name="GoogleRegister">REGISTER WITH GOOGLE</string>
    <string name="LoginRedirect">ALREADY HAVE AN ACCOUNT?</string>
    <string name="Loginbtn">LOGIN HERE</string>

    <!--    Create List Page translations-->
    <string name="CreateListTitle">CREATE lIST</string>
    <string name="LIST_TITLE">LIST TITLE:</string>
    <string name="List_Hint">e.g., Groceries, Weekend Chores, etc.</string>
    <string name="AddItem">ADD ITEM:</string>
    <string name="ItemHint">Type new item here</string>
    <string name="ADD">ADD</string>
    <string name="CurrentList">CURRENT LIST:</string>

    <!--    Currency Page Translations-->
    <string name="CURRENCY">CURRENCY</string>
    <string name="From">FROM:</string>
    <string name="To">TO:</string>
    <string name="CurrencyHint">ENTER CURRENCY</string>
    <string name="Amount">AMOUNT:</string>
    <string name="AmountHint">ENTER AMOUNT</string>
    <string name="Submit">SUBMIT</string>
    <string name="Converted">Converted Result:</string>

    <!--    User Profile Page Translations-->
    <string name="UserProfile">USER PROFILE</string>
    <string name="FullName">FULL NAME:</string>
    <string name="FullNameHint">ENTER FULL NAME</string>
    <string name="Email">EMAIL:</string>
    <string name="EmailHint">Enter EMAIL</string>
    <string name="Number">NUMBER:</string>
    <string name="NumberHint">ENTER PHONE NUMBER</string>
    <string name="Gender">GENDER:</string>
    <string name="GenderHint">ENTER GENDER</string>
    <string name="Save">SAVE</string>
    <string name="EditProfile">EDIT PROFILE</string>

    <!--    Events Page Translations-->
    <string name="Events">EVENTS</string>

    <!--    My List Page Translations-->
    <string name="MyList">MY LIST</string>
    <string name="SearchListHint">Search for a list...</string>
    <string name="NewList">NEW LIST</string>

    <!--    My Search Page AND 2 Translations-->
    <string name="MySearch">MY SEARCH</string>
    <string name="Weather">WEATHER</string>
    <string name="Restaurants">RESTAURANTS</string>
    <string name="Transport">TRANSPORT</string>
    <string name="CALENDAR">CALENDAR</string>

    <!--    My Suitcase page Translations-->
    <string name="TripDetails">TRIP DETAILS</string>

    <!--    Password Reset Page Translations-->
    <string name="PasswordReset">RESET PASSWORD</string>
    <string name="PasswordResetHint">PLEASE ENTER YOUR EMAIL TO RESET PASSWORD.</string>
    <string name="Back">Back</string>

    <!--    Trip Details Page Translations-->
    <string name="EnterLocation">ENTER LOCATION</string>
    <string name="EnterDestination">ENTER DESTINATION</string>
    <string name="Time">TIME:</string>
    <string name="EnterTimeHint">ENTER Time:</string>
    <string name="EnterLocation1">LOCATION (AIRPORT):</string>
    <string name="EnterLocationHint">ENTER AIRPORT</string>
    <string name="ViewTrips">VIEW TRIPS</string>
    <string name="AIRPORT">AIRPORT:</string>

    <!--    View List Details Page Translations-->
    <string name="ViewListDetails">VIEW LIST DETAILS</string>
    <string name="ListName">List Name:</string>
    <string name="NewItem">New item</string>

    <!--    Weather page Translations-->
    <string name="EnterCityHint">Enter city...</string>
    <string name="GetWeather">Get Weather</string>
    <string name="Location1">Location</string>
    <string name="Temperature">Temperature</string>
    <string name="Humidity">Humidity</string>
    <string name="WindSpeed">Wind Speed</string>
    <string name="Wind">Wind</string>
    <string name="Condition">Condition</string>
    <string name="Date">Date</string>

    <!--    Recycler View points Translations-->
    <string name="ExampleItemText">Example List Item Text</string>

    <string name="TransportName">Transport Name</string>
    <string name="FindTransportBtn">Find Transport</string>
    <string name="Address">Address</string>

    <string name="VenueName">Venue Name:</string>
    <string name="Location">LOCATION:</string>
    <string name="TYPE">TYPE:</string>
    <string name="TITLE">Title</string>
    <string name="RestaurantName">RESTAURANT NAME:</string>
    <string name="Style">STYLE:</string>
    <string name="FlightTime">FLIGHT TIME:</string>

    <!--    SETTINGS PAGE-->
    <string name="Settings">SETTINGS</string>
    <string name="NOTIFICATIONS">NOTIFICATIONS</string>
    <string name="LIST_NOTIFICATIONS">List Notifications</string>
    <string name="TRIP_NOTIFICATIONS">Trip Notifications</string>
    <string name="PROFILE_UPDATES">Profile Updates</string>
    <string name="Notifications_tip">Toggle notifications for different app activities. Notifications will appear when you create lists, save trips, or update your profile.</string>


    <!--     translatable="false" default language buttons-->
    <string name="english" translatable="false">English</string>
    <string name="afrikaans" translatable="false">Afrikaans</string>
    <string name="zulu" translatable="false">IsiZulu</string>

</resources>